newtabpage: fix thumbnails align of last row

--- a/theme/chrome/browser/newtab/newTab.css
+++ b/theme/chrome/browser/newtab/newTab.css
@@ -121,7 +121,7 @@
 
 /* CELLS */
 .newtab-cell {
-  -moz-margin-end: 13px;
+  -moz-margin-end: 0px;
   background-color: rgba(255,255,255,.2);
   border: 1px solid;
   border-color: rgba(8,22,37,.12) rgba(8,22,37,.14) rgba(8,22,37,.16);
